    sofern die Funktion vorhanden ist. Bei der Ausgabe mit
    "get" wird nun der Platzhalter "%*" unterstützt, der durch die
    Millisekunden ersetzt wird.
  - Überarbeitung und Vereinfachung der Exception-Klasse
  - Neue Klasse: CIcecast zum Streamen von MP3 oder OGG Dateien
    an einen Icecast Server
  - Update der Dokumentation auf Doxygen 1.7.3

Version 6.4.6 vom 17.03.2011	(CVS-Tag: REL_6_4_6)
  - CAssocArray hat Copy-Konstruktor und Zuweisungsoperator für CArray
    erhalten.
  - CDateTime vollständig dokumentiert
  - CDir verwendet nun unter Windows die Wide-Character-Funktionen
    zum Einlesen eines Verzeichnisses. Dadurch sollte es jetzt keine
    Probleme mehr mit Nicht-US-ASCII-Zeichen im Dateinamen geben.
  - Bugfix in CWikiParser: Bei der Darstellung von Sourcecode fehlt
    das schließende "</div>".
  - CTree hat neue const-Funktionen zum Rückwärtsdurchwandern des
    Baums mittels CTreeWalker
  - CAssocArray hat neue const-Funktionen zum Durchwandern des
    Baums mittels CTreeWalker
  - CCurl: Neue Funktionen: SetMaximumPersistantConnects, Reset
  - CArray hat neue Funktionen: MakeUnique und fromArgs
  - configure: Erkennung von Postgres überarbeitet
    
Version 6.4.5 vom 28.11.2010	(CVS-Tag: REL_6_4_5)
  - Bugfix in Sybase::Query: Bei einem Fehlerhaften Query wurde das
    Result-Set nicht gelöscht 
  - Bugfix in Sybase::SetResultBufferGrowSize: Es fehlte ein #IFDEF,
    wodurch das Kompilieren unmöglich war, wenn keine Sybase- oder
    FreeTDS-Libs installiert waren
  - Funktion PregMatch ist nun als eigenständige Funktion ausserhalb
    der String-Klasse vorhanden
  - CWString: Neue Funktion CWString::ReplaceLetterList
  - CBinary hat jetzt eine "ToHex"-Export-Funktion, die seinen Inhalt
    als String mit Hexwerten zurückgibt. Mit "FromHex" kann ein
    Hex-String wieder importiert werden.
  - CMemoryReference hat ebenfalls "toHex"-Funktion erhalten,
    CMemory die Funktion "fromHex"