@@ -31,19 +31,19 @@ if (($TAG =~ /^SNAP_(.*)$/)) {
 	}
 	$VERSION.="-SNAP";
 	$VERSION.=$DATE;
-	
+} elsif ($TAG eq "HEAD") {
+	$VERSION="HEAD";
+	$TAG="branches/RELENG_6";
 } else {
 	$TAG =~ /^REL_(.*)$/;
 	$VERSION=lc($1);
 	$VERSION =~ s/_/\./g;
+	$TAG="tags/$TAG";
 }
 
-if ($TAG eq "HEAD") {
-	$VERSION="HEAD";
-}
 my $DISTNAME="ppl-$VERSION";
 
-print "Packe $PACKAGE mit dem Tag \"$TAG\" aus dem CVS aus...\n";
+print "Packe $PACKAGE mit dem Tag \"$TAG\" aus dem SVN aus...\n";
 print "Version:  $VERSION\n";
 print "Distname: $DISTNAME\n";
 my $PWD=`pwd`;
@@ -51,10 +51,10 @@ chomp($PWD);
 my $err=`mkdir -p tmp
 cd tmp
 rm -rf $CVSTREE
-cvs -z3 -d:pserver:anonymous\@pplib.cvs.sourceforge.net:/cvsroot/pplib co -P -r $TAG $CVSTREE 2>&1`;
+svn co https://pplib.svn.sourceforge.net/svnroot/pplib/lib/$TAG lib 2>&1`;
 
 if ($? != 0 ) {
-	print "ERROR: Version konnte nicht aus dem CVS geholt werden!\n";
+	print "ERROR: Version konnte nicht aus dem SVN geholt werden!\n";
 	print $err;
 	print "\n";
 	exit;
@@ -65,11 +65,9 @@ print "Doxygen...\n";
 `mkdir -p tmp/$CVSTREE/documentation`;
 print `cd tmp/$CVSTREE; doxygen Doxyfile; cp docs/header-bg.png documentation/html`;
 #print "ok, erstelle PDF...\n";
-#print `cd tmp/$CVSTREE/documentation/latex; make`;
 #print "Kopiere PDF nach documentation...\n";
-#`mv tmp/$CVSTREE/documentation/latex/refman.pdf tmp/$CVSTREE/documentation/ppl6-manual.pdf`;
 #print "ok, loesche ueberfluessige Dokumentation...\n";
-#`cd tmp/$CVSTREE/documentation; rm -rf *.tmp latex man`;
+
 
 #print "Kopiere Doku...\n";
 #`mkdir -p tmp/$CVSTREE/documentation; cp documentation/*.pdf tmp/$CVSTREE/documentation; cd documentation; find html | cpio -pdmv ../tmp/$CVSTREE/documentation`;
@@ -80,7 +78,7 @@ print `mkdir -p dist
 rm -rf dist/$DISTNAME*
 mkdir -p dist/$DISTNAME
 cd tmp/$CVSTREE
-tar -cf $PWD/dist/tmp.tar --exclude *.core --exclude CVS --exclude config --exclude .cvsignore configure Makefile.in ppl6-config.in *.TXT VERSION src include Doxyfile Doxyfile.latex docs documentation autoconf *.sln *.vcproj ppl6.ico resource/res.h  resource/ppl6-icon-256x256.png resource/ppl6-icon-32x32.png tools/pplgenresource
+tar -cf $PWD/dist/tmp.tar --exclude *.core --exclude CVS --exclude config --exclude .cvsignore configure Makefile.in ppl6-config.in *.TXT VERSION src include Doxyfile docs documentation autoconf *.sln *.vcproj ppl6.ico resource/res.h  resource/ppl6-icon-256x256.png resource/ppl6-icon-32x32.png tools/pplgenresource
 cd $PWD
 cd dist/$DISTNAME
 tar -xf ../tmp.tar
